<resources>
    <string name="app_name">FirstAid</string>
    <string name="action_settings">Settings</string>
    <string name="button_1_text">Heart Attack</string>
    <string name="button_2_text">Heart Attack</string>
    <string name="button_3_text">Heart Attack</string>
    <string name="button_4_text">Heart Attack</string>
    <string name="button_5_text">Heart Attack</string>
    <string name="button_6_text">Heart Attack</string>
</resources>
